[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/gameplay/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/misc/SettingsUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/font/Barlow-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0.556863, 0.556863, 0.556863, 1 )
font_data = ExtResource( 3 )

[node name="PauseScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.176471, 0.176471, 0.176471, 0.588235 )

[node name="PauseContainer" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -168.5
margin_top = -125.0
margin_right = 168.5
margin_bottom = 125.0
color = Color( 0.14902, 0.14902, 0.211765, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="PauseContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -90.0
margin_top = -125.0
margin_right = 90.0
margin_bottom = 125.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 20
alignment = 1

[node name="Resume" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 180.0
margin_bottom = 85.0
rect_min_size = Vector2( 0, 40 )
custom_constants/hseparation = 0
custom_fonts/font = SubResource( 1 )
text = "Resume"

[node name="Settings" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 105.0
margin_right = 180.0
margin_bottom = 145.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( -255, -95 )
custom_fonts/font = SubResource( 1 )
text = "Settings"

[node name="BackToMenu" type="Button" parent="PauseContainer/VBoxContainer"]
margin_top = 165.0
margin_right = 180.0
margin_bottom = 205.0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 1 )
text = "Back to Menu"

[node name="SettingsUI" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="PauseContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="PauseContainer/VBoxContainer/BackToMenu" to="." method="_on_BackToMenu_pressed"]
